[metadata]
name= pyautomail
version = "1.5.0"
authors = [  { name="Mohammad sina Allahkaram", email="msinamsina@gmail.com" },]
description= A Python pkg and command-line interface for Sending email to your contact list
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/msinamsina/automail/issues
    Changelog = https://github.com/msinamsina/automail/releases
    Documentation = https://automail.readthedocs.io/en/latest/
    Source Code = https://github.com/msinamsina/automail
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]

url= https://github.com/msinamsina/automail

[options]
packages = find:
python_requires = >=3.9
install_requires =
    sqlalchemy
    sqlalchemy_utils
    jinja2
    pandas

[options.packages.find]
where = ./

[options.entry_points]
console_scripts =
    automail = automail.manager:main

