[metadata]
name= pyautomail
author = Mohammad sina Allahkaram
author_email = msinamsina@gmail.com
description= Automated Email Sending for Large Scale Email and Gmail Automation
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/msinamsina/pyautomail/issues
    Changelog = https://github.com/msinamsina/pyautomail/releases
    Documentation = https://pyautomail.readthedocs.io/en/latest/
    Source Code = https://github.com/msinamsina/pyautomail
readme = "README.md"
requires-python = ">=3.9"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

url= https://github.com/msinamsina/pyautomail

[options]
packages = find:
python_requires = >=3.9
install_requires =
    sqlalchemy
    sqlalchemy_utils
    jinja2
    pandas
    coloredlogs
    pytest
    typer

[options.packages.find]
where = ./

[options.entry_points]
console_scripts =
    pyautomail = pyautomail.__main__:main
    pyautomail-manager = pyautomail.manager:main